--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.39.3",
     "isbot": "^5.1.17",
+    "jotai": "^2.12.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
